--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,23 @@
 title: "学習ログ"
-description: "毎日のGit/GitHub学習記録"
-theme: minima
+description: "Git/GitHub 学習の軌跡"
 baseurl: "/daily-commit-log"
+url: "https://syokota-cyber.github.io"
+theme: null
+remote_theme: "mmistakes/minimal-mistakes"
+plugins:
+  - jekyll-include-cache
+  - jekyll-feed
+  - jekyll-seo-tag
+
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+
+include:
+  - _pages
+
+markdown: kramdown
