--- a/habit-log/.github/workflows/ci.yml
+++ b/habit-log/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Check
+name: CI and Deploy
 
 on:
   push:
@@ -7,6 +7,22 @@ on:
       - feature/*
 
 jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v3
+
+      - name: 🏗️ Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
+
+      - name: 🚀 Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
+
   markdown-check:
     runs-on: ubuntu-latest
 
