fix: Minimal Mistakesテーマの設定を追加

--- a/habit-log/.github/workflows/ci.yml
+++ b/habit-log/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
     steps:
       - name: 📥 Checkout repository
@@ -19,6 +23,7 @@ jobs:
         with:
           source: ./
           destination: ./_site
+          jekyll_build_flags: "--verbose"
 
       - name: 🚀 Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
