fix: テーマの設定を最適化

--- a/habit-log/_config.yml
+++ b/habit-log/_config.yml
@@ -45,3 +45,9 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+
+# サイト設定
+locale: "ja-JP"
+timezone: "Asia/Tokyo"
+paginate: 5
+paginate_path: "/page:num/"
