--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,48 @@
 title: "学習ログ"
-description: "Git/GitHub 学習の軌跡"
+description: "毎日のGit/GitHub学習記録"
 baseurl: "/daily-commit-log"
 url: "https://syokota-cyber.github.io"
-theme: null
-remote_theme: "mmistakes/minimal-mistakes"
+
+# テーマ設定
+theme: minima
+
+# プラグイン設定
 plugins:
-  - jekyll-include-cache
   - jekyll-feed
   - jekyll-seo-tag
 
-defaults:
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-
-include:
-  - _pages
-
+# ビルド設定
 markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: false
+
+# サイト設定
+locale: "ja-JP"
+timezone: "Asia/Tokyo"
+
+# 日付設定
+date_format: "%Y年%m月%d日"
+time_format: "%H:%M"
+
+# 投稿設定
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "single"
+      author_profile: true
+      read_time: true
+      comments: false
+      share: true
+      related: true
+
+# 投稿の並び順
+collections:
+  posts:
+    output: true
+    permalink: /:year/:month/:day/:title/
+    sort_by: date
+    reverse: true
