fix: correct syntax for Format Markdown workflow

--- a/habit-log/.github/workflows/auto-format.yml
+++ b/habit-log/.github/workflows/auto-format.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Run Markdownlint
         uses: DavidAnson/markdownlint-cli2-action@v10
         with:
-          args: "**/*.md"
+          args: '**/*.md'
