--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Disable GitHub Pages
+name: Deploy GitHub Pages
 
 on:
   push:
@@ -9,13 +9,11 @@ permissions:
   contents: write
 
 jobs:
-  disable-pages:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Disable GitHub Pages
-        run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/pages \
-            -d '{"source":{"branch":"none"}}' 
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs 
